# riscv-bare-metal

./: Dockerfile  README.md  docker-compose.yaml  start_docker.sh
C/01_hello_world/: Makefile  hello.c  link.lds  start.s
rust/hello_world/: Cargo.toml
rust/hello_world/src/: main.rs
rust/uart/: Cargo.toml  Makefile  memory.x
rust/uart/.cargo/: config
rust/uart/macros/: Cargo.toml
rust/uart/macros/src/: lib.rs
rust/uart/src/: lib.rs  main.rs
rust/uart/src/uart_16550/: uart_16550.rs
