[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[uart_16550]
proc-macro = true

[dependencies]
riscv-rt = "0.11.0"
riscv = "0.10.0"
panic-halt = "0.2.0"
volatile-register = "0.2.2"
numtoa = "0.2.4"
my_riscv_macros = {path = "macros", version = "0.0.1"}
